--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 70px 50px;
-  flex-wrap: wrap;
 }
 
 .titulo-nome {
@@ -33,6 +32,8 @@ body {
 
 .lista-itens {
   display: flex;
+  align-items: center;
+  justify-content: center;
   list-style: none;
   font-family: "Poppins", sans-serif;
   font-size: 26px;
@@ -61,10 +62,12 @@ body {
   margin: 40px 50px;
   flex-wrap: wrap;
 }
-
+.descricao-home {
+  margin: 50px 50px;
+}
 .imagem-perfil {
-  min-height: 400px;
-  min-width: 400px;
+  height: 400px;
+  width: 400px;
   border-radius: 50%;
   background-color: #2e1461;
   display: flex;
@@ -99,6 +102,7 @@ body {
   width: 100%;
   padding: 20px 10%;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .titulo-sobreMim {
@@ -114,11 +118,12 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin: 50px 50px;
 }
 
 .sub-titulo {
   font-family: "Lexend", sans-serif;
-  font-size: 48px;
+  font-size: 40px;
   color: #ddd8fc;
   font-weight: bold;
 }
@@ -126,11 +131,12 @@ body {
 .paragrafo {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
-  font-size: 32px;
+  font-size: 28px;
   color: white;
 }
 
 .img-sobreMim {
+  max-height: 400px;
   border-radius: 6px;
   box-shadow: 0 0 2px 3px #c5b8fa;
 }
@@ -175,7 +181,7 @@ body {
 .titulo-card {
   color: #fff;
   font-family: "Poppins", sans-serif;
-  font-family: 36px;
+  font-size: 36px;
   font-weight: bold;
 }
 
@@ -199,7 +205,7 @@ body {
 .card-projeto {
   width: 400px;
   height: 500px;
-  background-color: #F5F4FE;
+  background-color: #f5f4fe;
   border-radius: 20px;
   box-shadow: 0 0 2px 4px rgba(46, 20, 97, 0.1);
   display: flex;
@@ -220,17 +226,18 @@ body {
 }
 
 .titulo-projeto {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-size: 26px;
   font-weight: 500;
   color: #000;
 }
 
 .paragrafo-projeto {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 500;
-  color: #6C6C6C;
+  color: #6c6c6c;
+  
 }
 
 .actions-projetos {
@@ -241,14 +248,14 @@ body {
 
 .botao-github {
   border-radius: 10px;
-  background-color: #1D1B1D;
+  background-color: #1d1b1d;
   display: flex;
   padding: 5px 10px;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
   color: #fff;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-size: 16px;
   font-weight: 500;
   gap: 12px;
@@ -256,15 +263,55 @@ body {
 
 .botao-projeto {
   border-radius: 10px;
-  background-color: #7B43E4;
+  background-color: #7b43e4;
   display: flex;
   padding: 5px 10px;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
   color: #fff;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-size: 16px;
   font-weight: 500;
   gap: 12px;
+}
+@media (max-width: 1032px) {
+  /* inicio nav */
+  .navbar {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .lista-itens {
+    flex-direction: column;
+  }
+  /* fim nav */
+  /* Inicio Home */
+  .home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .descricao-home{
+    margin: 30px 0;
+  }
+  .titulo-apresentacao {
+    font-family: "Lexend", sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: #fff;
+  }
+
+  .titulo-sobreMim,
+  .titulo-Tecnologias {
+    font-size: 50px;
+  }
+
+  .paragrafo{
+    font-size: 22px;
+  }
+
 }
