--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,7 @@ body {
 .img-projeto {
   border-radius: 10px;
   min-width: 250px;
-  min-width: 340px;
+  height: 340px;
 }
 
 .header-projeto {
